discussion/kv_engine/176712/176712_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Pass Producer to BackfillManagerTask

The ownership hierarchy is the following:

  Producer
    -> BackfillManager
      -> BackfillTask
        -> BackfillManager (weak)

, with Task that stores a weak reference to Manager.

That model allows scenarios where a Producer connection has gone but
Task/Manager are still alive. Task needs to run a backfill for
realizing that the connection has been removed.

With this change we give Task a direct weak reference to Producer.
That way, Task would spot a dead Producer (and thus cancel itself)
before entering any backfill scan-loop.

Change-Id: I436cf6a7d5b5ebba6a913aa1e803c5c31dfaeac1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-28 07:49:31.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-28 07:49:43.000000000
Message: 
Patch Set 6: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304434/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 08:25:36.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/302/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/302/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/302/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/296/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/417/ : FAILURE

Failure of GoogleTest "CollectionsRbacCollection.CollectionAccessBucketEaccess":

<pre>
[ RUN      ] CollectionsRbacCollection.CollectionAccessBucketEaccess
unknown file: error: SEH exception with code 0xc0000005 thrown in SetUp().
[  FAILED  ] CollectionsRbacCollection.CollectionAccessBucketEaccess (2 ms)
CollectionsRbacCollection.CollectionAccessBucketEaccess
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/417/ )

Timeout of a CTest test 310/423 Test #285: ep_testsuite_basic.ephemeral.comp_active ......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/417/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/311/ : FAILURE

ThreadSanitizer issue: heap-use-after-free (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/311/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/301/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core
[2022-06-28T08:08:02.837Z] 
[2022-06-28T08:08:02.837Z] 
[2022-06-28T08:08:02.837Z] 99% tests passed, 2 tests failed out of 444
[2022-06-28T08:08:02.837Z] 
[2022-06-28T08:08:02.837Z] Total Test time (real) = 468.30 sec
[2022-06-28T08:08:02.837Z] 
[2022-06-28T08:08:02.837Z] The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/301/ )

Test exceeded the timeout:
[2022-06-28T08:04:08.588Z] Running [74/93]: test dcp early termination.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/314/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/314/ )

Test exceeded the timeout:
[2022-06-28T08:07:05.834Z] Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/314/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [74/93]: test dcp early termination...Exceeded maximum wait time of 60000000us waiting for stat "ep_dcp_num_running_backfills(dcp)" to be 0 (last value:1) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/314/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/314/ )

Test exceeded the timeout:
[2022-06-28T08:04:28.975Z] Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/445/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only
[2022-06-28T07:58:20.778Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1180: Failure
[2022-06-28T07:58:20.778Z] Expected equality of these values:
[2022-06-28T07:58:20.778Z]   100
[2022-06-28T07:58:20.778Z]   getRRPercent(*store->getVBucket(vbid))
[2022-06-28T07:58:20.778Z]     Which is: 94
[2022-06-28T07:58:20.778Z] vb:0 not fully resident after eviction
[2022-06-28T07:58:20.778Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1180: Failure
[2022-06-28T07:58:20.778Z] Expected equality of these values:
[2022-06-28T07:58:20.778Z]   100
[2022-06-28T07:58:20.778Z]   getRRPercent(*store->getVBucket(vbid))
[2022-06-28T07:58:20.778Z]     Which is: 97
[2022-06-28T07:58:20.778Z] vb:1 not fully resident after eviction
[2022-06-28T07:58:20.778Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (358 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/445/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17501/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/322/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/304/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
